--- a/style.css
+++ b/style.css
@@ -14,11 +14,24 @@ h1 {
   margin: 0;
   font-size: 70px;
   text-transform: uppercase;
-  color: #8dc1cc;
+  color: #fff;
+}
+
+h3 {
+  color: #504f4d;
+  font-size: 1.8em;
+}
+
+.visualization > p {
+  color: #504f4d;
+  font-weight: 100;
+  font-size: 1rem;
+  border: 1px dotted #ddd;
+  padding: 2rem;
 }
 
 .banner-img {
-  background-image: url(background.jpg);
+  background-image: url(back2.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -36,7 +49,7 @@ h1 {
   justify-content: center;
   flex-direction: column;
   color: #fff;
-  width: 45%;
+  width: 75%;
   z-index: 5;
 
   background-color: rgba(0, 0, 0, 0.6);
@@ -48,9 +61,24 @@ h1 {
 .banner-txt > a {
   color: #ddd;
   text-decoration: none;
+  font-size: 2em;
 }
 .hidden {
   display: none;
+}
+
+.box {
+  padding: 1em;
+
+  flex: 1;
+  width: 100%;
+}
+
+.knobs {
+  display: flex;
+  justify-content: stretch;
+
+  width: 100%;
 }
 
 .visualization {
@@ -64,10 +92,13 @@ h1 {
   padding: 2em;
   margin: 0 auto;
 }
+.visualization > hr {
+  color: #fff;
+}
 
 .chart {
   min-height: 80vh;
-  width: 80%;
+  width: 100%;
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -94,7 +125,23 @@ button:hover {
 canvas {
   background-color: white;
   min-height: 400px;
-  width: 80%;
+  width: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 960px;
+
+  padding: 0 2em;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  flex-direction: column;
+  text-align: center;
 }
 
 /* select pure styles */
