--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ body {
   padding: 0;
   font-family: "Open Sans", sans-serif;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 h1 {
   margin: 0;
-  font-size: 70px;
+  font-size: 6em;
   text-transform: uppercase;
   color: #fff;
 }
@@ -20,6 +21,7 @@ h1 {
 h3 {
   color: #504f4d;
   font-size: 1.8em;
+  font-family: "Gloria Hallelujah", cursive;
 }
 
 .visualization > p {
@@ -139,9 +141,31 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   flex-direction: column;
   text-align: center;
+  background-color: #ffa600;
+  border-top: 5px dotted black;
+}
+footer h5 a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.5em;
+  font-family: "Gloria Hallelujah", cursive;
+}
+
+footer h5 a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+.arrow {
+  font-size: 2rem;
+  color: #ffa600;
+}
+
+.arrow a {
+  color: #ffa600;
 }
 
 /* select pure styles */
