--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ canvas {
 
 footer {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   font-size: 1.6rem;
@@ -152,6 +153,7 @@ footer h5 a {
   color: inherit;
   font-size: 1.5em;
   font-family: "Gloria Hallelujah", cursive;
+  display: flex;
 }
 footer .small {
   font-weight: 100;
@@ -169,6 +171,10 @@ footer h5 a:hover {
 
 .arrow a {
   color: #ffa600;
+}
+
+footer > h5 {
+  display: inline-flex;
 }
 
 /* select pure styles */
@@ -272,4 +278,68 @@ footer h5 a:hover {
   outline: none;
   padding: 10px;
   width: 100%;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+/* RESPONSIVE */
+
+@media only screen and (max-width: 720px) {
+  .visualization {
+    padding: 0;
+  }
+  footer {
+    display: flex;
+  }
+
+  .banner-img {
+    height: 30vh;
+    /* filter: blur(5px); */
+  }
+
+  .banner-txt {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    width: 75%;
+    z-index: 5;
+
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    font-weight: 100;
+    border: 10px solid #fff;
+    padding: 2em;
+  }
+  .banner-txt > a {
+    color: #ddd;
+    text-decoration: none;
+    font-size: 2em;
+  }
+
+  h1 {
+    margin: 0;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    color: #fff;
+  }
+
+  #viz > h3 {
+    display: none;
+  }
+  .banner-txt > p {
+    display: none;
+  }
+  .knobs {
+    display: flex;
+    flex-direction: column;
+  }
 }
